--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -34,8 +34,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-      repository: ralarcon/reference-architectures
-      path: reference-architectures
+      with:
+        repository: ralarcon/reference-architectures
+        path: reference-architectures
       
     - uses: azure/login@v1
       with:
