--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -35,7 +35,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
       with:
-        repository: ralarcon/reference-architectures
+        repository: ralarcon/reference-architectures@containerized-web-app
         path: reference-architectures
       
     - uses: azure/login@v1
