--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -36,6 +36,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: ralarcon/reference-architectures
+        ref: containerized-web-app
         path: reference-architectures
       
     - uses: azure/login@v1
