--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -28,6 +28,7 @@ env:
   DB_ADMIN_LOGIN: dbadminlogin  # name for the database admin login
   DB_ADMIN_LOGIN_PASSWORD: ${{ secrets.DB_ADMIN_LOGIN_PASSWORD }}  # password for the db admin login
   AZURE_RESOURCE_GROUP: rsg-todo-sample  # target resource group {resource-group-name} you setup in the pre-requisties
+  AZURE_SUBSCRIPTION_ID: cff5d937-9797-41da-b990-ba5295efb820 ## target subscription
 
 jobs:
   deploy_environment:
@@ -45,7 +46,7 @@ jobs:
 
     - uses: azure/arm-deploy@v1
       with:
-        subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
+        subscriptionId: cff5d937-9797-41da-b990-ba5295efb820
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: reference-architectures/managed-web-app/containerized-web-app/PaaS-Containerized/Templates/PaaS-Containerized.json
         parameters: appName=${{ env.APP_NAME }};environment=${{ env.APP_ENVIRONMENT }};locationShort=${{ env.APP_LOCATION_SHORT }};dbName=${{ env.DB_NAME }};dbAdminLogin=${{ env.DB_ADMIN_LOGIN }};dbAdminLoginPassword=${{ env.DB_ADMIN_LOGIN_PASSWORD }}
