--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -50,9 +50,64 @@ jobs:
         echo "Current SubscriptionId: $CURRENT_SUBSCRIPTION_ID"
 
     - uses: azure/arm-deploy@v1
+      id: armdeploy
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: reference-architectures/managed-web-app/containerized-web-app/PaaS-Containerized/Templates/PaaS-Containerized.json
         parameters: appName=${{ env.APP_NAME }} environment=${{ env.APP_ENVIRONMENT }} locationShort=${{ env.APP_LOCATION_SHORT }} dbName=${{ env.DB_NAME }} dbAdminLogin=${{ env.DB_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.DB_ADMIN_LOGIN_PASSWORD }}
         deploymentName: github-action-enviroment-deployment
+    
+  build_publish_container:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: master
+
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Get Registry Info
+      run: |
+
+        LOGIN_SERVER=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ jobs.deploy_environment.steps.armdeploy.containerRegistryName }} --query loginServer -o tsv)
+        USERNAME=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ jobs.deploy_environment.steps.armdeploy.containerRegistryName }} --query name -o tsv)
+        PASSWORD=$(az acr credential show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ jobs.deploy_environment.steps.armdeploy.containerRegistryName }} --query passwords[0].value -o tsv)
+        echo "::add-mask::$PASSWORD"
+        echo "ACR_LOGIN_SERVER=$LOGIN_SERVER" >> $GITHUB_ENV
+        echo "ACR_USERNAME=$USERNAME" >> $GITHUB_ENV
+        echo "ACR_PASSWORD=$PASSWORD" >> $GITHUB_ENV
+
+    - uses: azure/docker-login@v1
+      with:
+        login-server: ${{ env.ACR_LOGIN_SERVER }}
+        username: ${{ env.ACR_USERNAME }}
+        password: ${{ env.ACR_PASSWORD }}
+        
+    - run: |
+        echo "Build image and push to ${{ env.ACR_LOGIN_SERVER }}"
+
+        echo "Building the container..."
+        docker build -t todo-sample:latest .
+        echo
+
+        echo "Tagging for azure container registry"
+        docker tag todo-sample ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest
+        echo
+
+        echo "Push image"
+        docker push ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest
+        echo
+
+        echo "Repositories in the container registry"
+        az acr repository list -n ${{ env.ACR_LOGIN_SERVER }}        
+      working-directory: ./todo-sample
+        
+      
+        
+
+
+  #update_webapp:
+    
