--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -62,6 +62,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: master
+        path: main
 
     # - uses: azure/login@v1
     #   with:
@@ -99,7 +100,7 @@ jobs:
 
         echo "Repositories in the container registry"
         az acr repository list -n ${{ env.ACR_LOGIN_SERVER }}        
-      working-directory: ./todo-sample
+      working-directory: ./main/todo-sample
         
       
         
