--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -1,4 +1,4 @@
-name: Build and deploy Docker app with Azure SQL Backend to Azure Web App on Containers
+name: Create, Build and Deploy Docker WebApp with Azure SQL
 
 on: push
 
@@ -12,22 +12,20 @@ on: push
 #
 # For help, go to: https://github.com/Azure/login#configure-deployment-credentials
 
-
-
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
 #
 # Set up the following secrets in your repository:
-#   AZURE_CREDENTIALS, DB_ADMIN_LOGIN_PASSWORD
+#   AZURE_CREDENTIALS, SQL_SERVER_ADMIN_PASSWORD
 # 2. Change these variables for your configuration:
 env:
-  WEB_APP_NAME: todo-sample  # set this to your application's name
-  WEB_APP_ENVIRONMENT: dev   # environment to setup the resource. Allowed vaules: dev, qa, pro
-  WEB_APP_LOCATION_SHORT: weu  # location, be sure it represent a shortern for the {resource-group-location} used in the pre-requistes
-  DB_NAME: todosDb  # database name used by the application
-  DB_ADMIN_LOGIN: dbadminlogin  # name for the database admin login
-  DB_ADMIN_LOGIN_PASSWORD: ${{ secrets.DB_ADMIN_LOGIN_PASSWORD }}  # password for the db admin login
-  AZURE_RESOURCE_GROUP: rsg-todo-sample  # target resource group {resource-group-name} you setup in the pre-requisties
+  AZURE_RESOURCE_GROUP: rsg-todo-sample   # target resource, must match the {resource-group-name} you setup in the pre-requisties
+  WEB_APP_NAME: app-todo-sample           # set the name for the Web App on Azure
+  ACR_NAME: crtodosample                  # set the name for the Azure Container Registry
+  SQL_SERVER_NAME: sql-todo-sample        # set the name for the Azure SQL Server
+  SQL_SERVER_ADMIN_LOGIN: dbadminlogin    # set the name for the Azure SQL Server admin login
+  SQL_SERVER_ADMIN_PASSWORD: ${{ secrets.SQL_SERVER_ADMIN_PASSWORD }}  # password for the Azure SQL Sever admin login -> must be in the secrets
+  SQL_DB_NAME: todoDb                     # set the name for the Azure SQL Database
 
 jobs:
   create_build_deploy:
@@ -43,7 +41,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
       
-    - name: Set Azure SubscriptionId
+    - name: Get Azure SubscriptionId
       run: |
         CURRENT_SUBSCRIPTION_ID=$(az account show --query id -o tsv)
         echo "AZURE_SUBSCRIPTION_ID=$CURRENT_SUBSCRIPTION_ID" >> $GITHUB_ENV
@@ -55,7 +53,7 @@ jobs:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: reference-architectures/managed-web-app/containerized-web-app/PaaS-Containerized/Templates/PaaS-Containerized.json
-        parameters: appName=${{ env.WEB_APP_NAME }} environment=${{ env.WEB_APP_ENVIRONMENT }} locationShort=${{ env.WEB_APP_LOCATION_SHORT }} dbName=${{ env.DB_NAME }} dbAdminLogin=${{ env.DB_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.DB_ADMIN_LOGIN_PASSWORD }}
+        parameters: appName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: github-action-enviroment-deployment
     
     ## POTENTIALLY, OTHER WORKFLOW TO USE
@@ -65,19 +63,18 @@ jobs:
 
     - name: Get ACR Info & Database Connection String
       run: |
-        LOGIN_SERVER=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ steps.armdeploy.outputs.containerRegistryName }} --query loginServer -o tsv)
-        USERNAME=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ steps.armdeploy.outputs.containerRegistryName }} --query name -o tsv)
-        PASSWORD=$(az acr credential show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ steps.armdeploy.outputs.containerRegistryName }} --query passwords[0].value -o tsv)
-        CONN_STR=$(az sql db show-connection-string --client ado.net --server ${{ steps.armdeploy.outputs.sqlServerName }} --name $DB_NAME -o tsv)
-        CONN_STR=$(echo $CONN_STR | sed "s/<username>/${{ env.DB_ADMIN_LOGIN }}/g")
-        CONN_STR=$(echo $CONN_STR | sed "s/<password>/${{ env.DB_ADMIN_LOGIN_PASSWORD }}/g")
+        LOGIN_SERVER=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
+        USERNAME=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.ACR_NAME }} --query name -o tsv)
+        PASSWORD=$(az acr credential show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.ACR_NAME }} --query passwords[0].value -o tsv)
+        CONN_STR=$(az sql db show-connection-string --client ado.net --server ${{ env.SQL_SERVER_NAME }} --name ${{ env.SQL_DB_NAME }} -o tsv)
+        CONN_STR=$(echo $CONN_STR | sed "s/<username>/${{ env.SQL_SERVER_ADMIN_LOGIN }}/g")
+        CONN_STR=$(echo $CONN_STR | sed "s/<password>/${{ env.SQL_SERVER_ADMIN_PASSWORD }}/g")
 
         echo "::add-mask::$PASSWORD"
         echo "ACR_LOGIN_SERVER=$LOGIN_SERVER" >> $GITHUB_ENV
         echo "ACR_USERNAME=$USERNAME" >> $GITHUB_ENV
         echo "ACR_PASSWORD=$PASSWORD" >> $GITHUB_ENV
-        echo "DB_CONN_STR=$CONN_STR" >> $GITHUB_ENV
-        echo "QUITARRRR: $CONN_STR"
+        echo "SQL_DB_CONN_STR=$CONN_STR" >> $GITHUB_ENV
 
     - uses: azure/docker-login@v1
       with:
@@ -109,16 +106,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-      
-    - name: Update database
-      run: |
-        dotnet tool install --global dotnet-ef
-        dotnet tool restore
-        dotnet ef database update
-      env:
-        ASPNETCORE_ENVIRONMENT: Development
-        ConnectionStrings__MyDbConnection: ${{ env.DB_CONN_STR }}
-      working-directory: ./main/todo-sample
 
     - name: Set Web App ACR authentication
       uses: Azure/appservice-settings@v1
@@ -147,9 +134,15 @@ jobs:
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ steps.armdeploy.outputs.webSiteName }} 
-        images: ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest   
-
-
-
-  #update_webapp:
+        images: ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest 
+        
+    - name: Update database
+      run: |
+        dotnet tool install --global dotnet-ef
+        dotnet tool restore
+        dotnet ef database update
+      env:
+        ASPNETCORE_ENVIRONMENT: Development
+        ConnectionStrings__MyDbConnection: ${{ env.SQL_DB_CONN_STR }}
+      working-directory: ./main/todo-sample        
     
