--- a/.github/workflows/docker-webapp-container-sql-on-azure.yaml
+++ b/.github/workflows/docker-webapp-container-sql-on-azure.yaml
@@ -33,8 +33,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        repository: ralarcon/reference-architectures ## TODO: Point to the official reference-architectures repo
-        ref: containerized-web-app ## TODO: Remove branch reference once published
+        repository: ralarcon/reference-architectures  ## TODO: Point to the official reference-architectures repo
+        ref: containerized-web-app-refactor-params    ## TODO: Remove branch reference once published
         path: reference-architectures
       
     - uses: azure/login@v1
@@ -56,7 +56,6 @@ jobs:
         parameters: appName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: github-action-enviroment-deployment
     
-    ## POTENTIALLY, OTHER WORKFLOW TO USE
     - uses: actions/checkout@v2
       with:
         path: main
