--- a/.github/workflows/deploy-app.webapp-container-sql.yaml
+++ b/.github/workflows/deploy-app.webapp-container-sql.yaml
@@ -28,15 +28,13 @@ env:
   SQL_DB_NAME: todoDb                     # set the name for the Azure SQL Database
 
 jobs:
-  create_build_deploy:
+  build_deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
-        repository: ralarcon/reference-architectures  ## TODO: Point to the official reference-architectures repo
-        ref: containerized-web-app-refactor-params    ## TODO: Remove branch reference once published
-        path: reference-architectures
-      
+        path: main
+        
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -55,10 +53,6 @@ jobs:
         template: reference-architectures/managed-web-app/containerized-web-app/PaaS-Containerized/Templates/PaaS-Containerized.json
         parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: github-action-enviroment-deployment
-    
-    - uses: actions/checkout@v2
-      with:
-        path: main
 
     - name: Get ACR Info & Database Connection String
       run: |
