--- a/todo-sample/appsettings.json
+++ b/todo-sample/appsettings.json
@@ -4,6 +4,10 @@
       "Default": "Information"
     }
   },
+  "VersionInfo": {
+    "Number":"0.0.0",
+    "Date":"2020-10-30"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-2085246d-aff5-4310-a0b8-93780358cdae;Trusted_Connection=True;MultipleActiveResultSets=true"
