--- a/.github/workflows/create-resources.webapp-container-sql.yaml
+++ b/.github/workflows/create-resources.webapp-container-sql.yaml
@@ -1,6 +1,9 @@
 name: Create Resources ACR, App Service (linux Containers), Azure SQL Server
 
-on: workflow_dispatch  ## Manually Triggered (initially, can be configured to be launched when the code from the repository changes)
+on: workflow_dispatch ## Manually Triggered (initially, can be configured to be launched when the code from the repository changes)
+
+# on: workflow_dispatch ## Manually Triggered (initially, can be configured to be launched when the code from the repository changes)
+ 
 
 # Pre-Requisites
 # Create the target Resource Group
