--- a/.github/workflows/create-resources.webapp-container-sql.yaml
+++ b/.github/workflows/create-resources.webapp-container-sql.yaml
@@ -1,17 +1,23 @@
-name: Create Resources ACR, App Service (linux Containers), Azure SQL Server
+# name: Create Resources ACR, App Service (linux Containers), Azure SQL Server
 
+# This is a basic workflow that is manually triggered
+
+name: Manual workflow
+
+# Controls when the action will run. Workflow runs when manually triggered using the UI
+# or API.
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Message to show'
+        description: 'Person to greet'
         # Default value if no value is explicitly provided
-        default: 'Create or update the sample Azure infrastructure based on the ARM template'
-
-#on: workflow_dispatch ## Manually Triggered (initially, can be configured to be launched when the code from the repository changes)
- 
+        default: 'World'
+        # Input has to be provided for the workflow to run
+        required: true
+        
 
 # Pre-Requisites
 # Create the target Resource Group
