disable all workflows

--- a/.github/workflows/deploy-app.webapp-container-sql.yaml
+++ b/.github/workflows/deploy-app.webapp-container-sql.yaml
@@ -1,6 +1,6 @@
 name: Create, Build and Deploy Docker WebApp with Azure SQL
 
-on: push
+on: workflow_dispatch
 
 # Pre-Requisites
 # Create the target Resource Group
