--- a/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
@@ -31,13 +31,15 @@ jobs:
   deploy_resources:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Get ARM Templates
+      uses: actions/checkout@v2
       with:
         repository: ralarcon/reference-architectures  ## TODO: Point to the official reference-architectures repo
         ref: containerized-web-app-refactor-params    ## TODO: Remove branch reference once published
         path: reference-architectures
-      
-    - uses: azure/login@v1
+
+    - name: Login for az cli commands 
+      uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
       
@@ -47,24 +49,21 @@ jobs:
         echo "AZURE_SUBSCRIPTION_ID=$CURRENT_SUBSCRIPTION_ID" >> $GITHUB_ENV
         echo "Current SubscriptionId: $CURRENT_SUBSCRIPTION_ID"
 
-    - uses: azure/arm-deploy@v1
-      id: armdeploy
+    - name: Deploy ARM templates
+      uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: reference-architectures/managed-web-app/containerized-web-app/PaaS-Containerized/Templates/PaaS-Containerized.json
         parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
-        deploymentName: github-action-enviroment-deployment
+        deploymentName: gha-deployment-${{ github.run_id }}-${{ github.run_number }}-${{ github.sha }}
 
-    - uses: actions/checkout@v2
+    - name: Checkout Source Code
+      uses: actions/checkout@v2
       with:
         path: main
-
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
       
-    - name: Get ACR Info & Database Connection String
+    - name: Get ACR Info & Database Connection
       run: |
         LOGIN_SERVER=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
         USERNAME=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.ACR_NAME }} --query name -o tsv)
@@ -80,7 +79,8 @@ jobs:
         echo "SQL_DB_CONN_STR=$CONN_STR" >> $GITHUB_ENV
         echo "APP_VERSION_DATE=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
 
-    - uses: azure/docker-login@v1
+    - name: Login to ACR
+      uses: azure/docker-login@v1
       with:
         login-server: ${{ env.ACR_LOGIN_SERVER }}
         username: ${{ env.ACR_USERNAME }}
@@ -111,10 +111,11 @@ jobs:
       with:
         dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
 
-    - name: Set Web App ACR authentication
+    - name: Set Web App Settings
       uses: Azure/appservice-settings@v1
       with:
         app-name: ${{ env.WEB_APP_NAME }}  
+        slot-name: staging
         app-settings-json: |
           [
             {
@@ -134,22 +135,24 @@ jobs:
             },
             {
                 "name": "VersionInfo__Number",
-                "value": "1.0.${{ github.run_number }}"
+                "value": "1.0.${{ github.run_number }}",
+                "slotSetting": false
             },
                         {
                 "name": "VersionInfo__Date",
                 "value": "${{ env.APP_VERSION_DATE }}"
+                "slotSetting": false,
             }
           ]
 
-    - name: 'Deploy to Azure Web App for Container'
+    - name: Deploy Azure WebApp to Staging
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.WEB_APP_NAME }} 
         images: ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest
         slot-name: staging
         
-    - name: Update database
+    - name: Update Database
       run: |
         dotnet tool install --global dotnet-ef
         dotnet tool restore
@@ -161,5 +164,7 @@ jobs:
 
     - name: Swap to production slot
       run: |
-        az webapp deployment slot swap --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.WEB_APP_NAME }} --slot staging --target-slot production 
+        az webapp deployment slot swap --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.WEB_APP_NAME }} --slot staging --target-slot production
+        echo "Swap finished. WebApp accessible at https://$(az webapp show --resource-group rsg-todo-sample --name app-todo-sample --query hostNames[0])"
+
     
