--- a/.github/workflows/build-deploy.webapp-container-sql.yaml
+++ b/.github/workflows/build-deploy.webapp-container-sql.yaml
@@ -118,8 +118,8 @@ jobs:
             },
                         {
                 "name": "VersionInfo__Date",
-                "value": "${{ env.APP_VERSION_DATE }}"
-                "slotSetting": false,
+                "value": "${{ env.APP_VERSION_DATE }}",
+                "slotSetting": false
             }
           ]
 
