--- a/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
@@ -140,8 +140,8 @@ jobs:
             },
                         {
                 "name": "VersionInfo__Date",
-                "value": "${{ env.APP_VERSION_DATE }}"
-                "slotSetting": false,
+                "value": "${{ env.APP_VERSION_DATE }}",
+                "slotSetting": false
             }
           ]
 
