--- a/.github/workflows/create.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create.webapp-container-sql-backend.yaml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ralarcon/reference-architectures  ## TODO: Point to the official reference-architectures repo
-        ref: containerized-web-app-refactor-params    ## TODO: Remove branch reference once published
+        ref: container-web-app    ## TODO: Remove branch reference once published
         path: reference-architectures
 
     - name: Login for az cli commands 
