add two triggers

--- a/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
@@ -1,6 +1,8 @@
 name: Create, Build and Deploy Docker WebApp with Azure SQL
 
-on: push
+on: 
+  push:
+  workflow_dispatch:
 
 # Pre-Requisites
 # Create the target Resource Group
